fixed map structure so that overflow works

--- a/FrontEnd/src/app/map/map.component.css
+++ b/FrontEnd/src/app/map/map.component.css
@@ -56,3 +56,11 @@
   border-style: solid;
   border-radius: 0.5em;
 }
+
+.sidebar{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 10001;
+  overflow-y: scroll;
+}
